feat: addded first file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Default template for PDM package"
 authors = [
     {name = "Markus Brachmann", email = "bm8798@mci4me.at"},
 ]
-dependencies = []
+dependencies = ["jupyter>=1.1.1"]
 requires-python = "==3.12.*"
 readme = "README.md"
 license = {text = "MIT"}
