--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = [
 ]
 dependencies = [
     "jupyter>=1.1.1",
+    "matplotlib>=3.10.8",
+    "pandas>=3.0.0",
 ]
 requires-python = "==3.12.*"
 readme = "README.md"
