--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "jupyter>=1.1.1",
     "matplotlib>=3.10.8",
     "pandas>=3.0.0",
+    "numpy>=2.4.2",
 ]
 requires-python = "==3.12.*"
 readme = "README.md"
